# chebyshev_primality_testing

./: .gitignore  CMakeLists.txt  README.md
include/: chebyshev-polynomial.h  primality-test-baseline.h
primes/: README.md
results/: timingprimes.csv
src/: chebyshev-polynomial.c  chebyshev-polynomial.cpp  chebyshev-polynomial.h  chebyshev-primality-test.c  chebyshev-primality-test.cpp  checbyshev-primality-test.wl  primality-test-baseline.c  primality-test-baseline.h
